--- a/package.json
+++ b/package.json
@@ -19,8 +19,14 @@
 		"test-build": "npm run check-style && npm run build"
 	},
 	"dependencies": {
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.0",
+		"@fortawesome/free-solid-svg-icons": "^6.7.2",
+		"@fortawesome/react-fontawesome": "^0.2.2",
+		"@mui/icons-material": "^6.2.0",
+		"@mui/material": "^6.2.0",
 		"firebase": "^10.13.0",
-		"next": "14.0.4",
+		"next": "^14.2.20",
 		"next-themes": "^0.2.1",
 		"nextjs-toploader": "^1.6.6",
 		"react": "^18",
